# Bombtype

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: entities.json
src/client/: CMakeLists.txt  MyWorld.cpp  MyWorld.hpp  main.cpp
src/client/ecs/entities/: EntityManager.hpp
src/client/ecs/systems/: IRenderSystem.hpp  IUpdateSystem.hpp  SystemManager.hpp
src/common/: CMakeLists.txt
src/common/ecs/: World.cpp  World.hpp
src/common/ecs/components/: AnimationComponent.hpp  BombComponent.hpp  CollisionComponent.hpp  Component.hpp  ComponentFactory.hpp  ExplosionComponent.hpp  HealthComponent.hpp  InputComponent.hpp  MapComponent.hpp  MovementComponent.hpp  NetworkComponent.hpp  PlayerComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
src/common/ecs/entities/: Entity.hpp  EntityManager.hpp
src/common/ecs/serialization/: IntRect.cpp  IntRect.hpp
src/common/ecs/systems/: BombSystem.hpp  ExplosionRenderSystem.hpp  ExplosionSystem.hpp  IEventSystem.hpp  IRenderSystem.hpp  IUpdateSystem.hpp  InputSystem.hpp  MapRenderSystem.hpp  MovementSystem.hpp  NetworkSystem.hpp  RenderSystem.hpp  SystemManager.hpp
src/common/network/: Serializer.hpp
src/common/network/exceptions/: NetworkExceptions.hpp
src/common/network/packets/: ErrorPacket.cpp  ErrorPacket.hpp  GameOverPacket.cpp  GameOverPacket.hpp  GameStartPacket.cpp  GameStartPacket.hpp  Packet.cpp  Packet.hpp
src/server/: CMakeLists.txt  main.cpp
